--- a/simple_votings/templates/registration/login.html
+++ b/simple_votings/templates/registration/login.html
@@ -1,6 +1,7 @@
 {% extends "../base.html" %}
 
 {% block content %}
+<h3>Авторизация</h3>
 
 {% if form.errors %}
   <p>Your username and password didn't match. Please try again.</p>
@@ -34,7 +35,6 @@
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="/auth/register">Not with us?</a></p>
 
 {% endblock %}
