Added password reset functionality.

--- a/simple_votings/templates/registration/login.html
+++ b/simple_votings/templates/registration/login.html
@@ -36,5 +36,6 @@
 </form>
 
 <p><a href="/auth/register">Not with us?</a></p>
+<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
 {% endblock %}
