--- a/simple_votings/templates/registration/login.html
+++ b/simple_votings/templates/registration/login.html
@@ -1,40 +1,48 @@
 {% extends "../base.html" %}
 
-{% block content %}
-<h3>Авторизация</h3>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Вход</title>
+  </head>
+  <body>
+    {% block content %}
+    <h3>Авторизация</h3>
 
-{% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+    {% if form.errors %}
+    <p>Имя пользователя или пароль введены неверно. Попробуйте снова.</p>
+    {% endif %} {% if next %} {% if user.is_authenticated %}
+    <p>
+      У вашего вас нет доступа к этой страницу. Чтобы продолжить, пожалуйста,
+      войдите в аккаунт, который имеет к ней доступ.
+    </p>
+    {% else %}
+    <p>Пожалуйста, войдите в аккаунт, чтобы увидель эту страницу.</p>
+    {% endif %} {% endif %}
 
-{% if next %}
-  {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-  {% else %}
-    <p>Please login to see this page.</p>
-  {% endif %}
-{% endif %}
+    <form method="post" action="{% url 'login' %}">
+      {% csrf_token %}
+      <table>
+        <tr>
+          <td>{{ form.username.label_tag }}</td>
+          <td>{{ form.username }}</td>
+        </tr>
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
+        <tr>
+          <td>{{ form.password.label_tag }}</td>
+          <td>{{ form.password }}</td>
+        </tr>
+      </table>
 
-<tr>
-  <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
-</tr>
+      <input type="submit" value="login" />
+      <input type="hidden" name="next" value="{{ next }}" />
+    </form>
 
-<tr>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
-<p><a href="/auth/register">Not with us?</a></p>
+    <p><a href="/auth/register">Нет аккаунта?</a></p>
+  </body>
+</html>
 
 {% endblock %}
