Frontend for account system

--- a/simple_votings/templates/registration/password_reset_complete.html
+++ b/simple_votings/templates/registration/password_reset_complete.html
@@ -1,5 +1,22 @@
-{% extends "../base.html" %}
-{% block content %}
-  <h1>Пароль изменён!</h1>
-  <p><a href="{% url 'login' %}">Тыкните сюда чтобы войти</a></p>
-{% endblock %}
+{% extends "../base.html" %} {% load static %}
+<!--  -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% block head %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Пароль изменён</title>
+    <link rel="stylesheet" href="{% static 'msgpage/style.css' %}" />
+    {% endblock %}
+  </head>
+  <body>
+    {% block content %}
+    <p>
+      Пароль изменён!
+      <br />
+      <br />
+      <a href="{% url 'login' %}">Тыкните сюда чтобы войти</a>
+    </p>
+    {% endblock %}
+  </body>
+</html>
