--- a/simple_votings/templates/registration/password_reset_done.html
+++ b/simple_votings/templates/registration/password_reset_done.html
@@ -1,9 +1,26 @@
-{% extends "../base.html" %}
-{% block content %}
-<p>
-    Мы отправили вам инструкции для сброса пароля. Если письмо не пришло, тогда проверьте папку спама.
+{% extends "../base.html" %} {% load static %}
+<!--  -->
 
-    Если в папке спама нет письма, тогда это значит что слишком много писем было отправлено, и google для защиты от спама
-    больше не отправляет письма с моего адреса. Попробуйте завтра =)
-</p>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% block head %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Успешно отправлено!</title>
+    <link rel="stylesheet" href="{% static 'msgpage/style.css' %}" />
+    {% endblock %}
+  </head>
+  <body>
+    {% block content %}
+    <p>
+      Мы отправили вам инструкции для сброса пароля. Если письмо не пришло,
+      тогда проверьте папку спама. Если в папке спама нет письма, тогда это
+      значит что слишком много писем было отправлено, и google для защиты от
+      спама больше не отправляет письма с моего адреса. Попробуйте завтра =)
+      <br />
+      <br />
+      <a href="{% url 'login' %}">К странице входа</a>
+    </p>
+    {% endblock %}
+  </body>
+</html>
