--- a/simple_votings/templates/registration/password_reset_form.html
+++ b/simple_votings/templates/registration/password_reset_form.html
@@ -1,11 +1,29 @@
-{% extends "../base.html" %}
-{% block content %}
+{% extends "../base.html" %} {% load static %}
 
-<form action="" method="post">
-  {% csrf_token %}
-    {% if form.email.errors %} {{ form.email.errors }} {% endif %}
-        {{ form.email.label }}: {{ form.email }}
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
-</form>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% block head %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Сбросить пароль</title>
+    <link rel="stylesheet" href="{% static 'reset/form.css' %}" />
+    {% endblock %}
+  </head>
+  <body>
+    {% block content %}
+    <form action="" method="post">
+      <p>Восстановление пароля</p>
+      {% csrf_token %}
+      <!--  -->
 
-{% endblock %}
+      {% if form.email.errors %} {{ form.email.errors }} {% endif%}
+
+      <!--  -->
+      <section class="field">
+        <label>{{ form.email.label }}</label> {{ form.email }}
+      </section>
+      <input type="submit" class="bt" value="Сбросить!" />
+    </form>
+    {% endblock %}
+  </body>
+</html>
