--- a/simple_votings/templates/base.html
+++ b/simple_votings/templates/base.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  {% block head %}
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% block head %} {% endblock %}
+  </head>
 
-  {% endblock %}
-  {% block title %}<title>Title</title>{% endblock %}
-</head>
-
-<body>
-  {% block content %}{% endblock %}
-</body>
+  <body>
+    {% block content %}{% endblock %}
+  </body>
 </html>
