--- a/simple_votings/templates/registration/logged_out.html
+++ b/simple_votings/templates/registration/logged_out.html
@@ -1,7 +1,22 @@
-{% extends "../base.html" %}
-
-{% block content %}
-<p>Logged out!</p>
-
-<a href="{% url 'login'%}">Click here to login again.</a>
-{% endblock %}
+{% extends "../base.html" %} {% load static %}
+<!--  -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% block head %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Выход</title>
+    <link rel="stylesheet" href="{% static 'msgpage/style.css' %}" />
+    {% endblock %}
+  </head>
+  <body>
+    {% block content %}
+    <p>
+      Logged out!
+      <br />
+      <br />
+      <a href="{% url 'login'%}">Click here to login again.</a>
+    </p>
+    {% endblock %}
+  </body>
+</html>
