--- a/simple_votings/templates/registration/login.html
+++ b/simple_votings/templates/registration/login.html
@@ -1,41 +1,63 @@
-{% extends "../base.html" %}
+{% extends "../base.html" %} {% load static %}
 
-{% block content %}
-<h3>Авторизация</h3>
+<!-- 
+Я оставил мета теги, потому что так страница выглядит 
+гораздо более цельной в редакторе файлов. Чисто фактически,
+можно оставть только то, что заключено в блоки 
+-->
 
-{% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% block head %}
+    <link rel="stylesheet" href="{% static 'login/style.css' %}" />
+    <title>Авторизация</title>
+    {% endblock head %}
+  </head>
+  <body>
+    {% block content %}
+    <section class="logCont">
+      <h3>Авторизация</h3>
 
-{% if next %}
-  {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-  {% else %}
-    <p>Please login to see this page.</p>
-  {% endif %}
-{% endif %}
+      {% if form.errors %}
+      <p class="error">
+        Имя пользователя или пароль введены неверно. Попробуйте снова
+      </p>
+      {% endif %} {% if next %} {% if user.is_authenticated %}
+      <p class="error">
+        У вашего аккаунта нет доступа к этой странице. Пожалуйста, войдите в
+        аккаунт с надлежащими правами.
+      </p>
+      {% else %}
+      <p class="error">
+        Пожалуйста, войдите чтобы увидеть содержимое этой страницы.
+      </p>
+      {% endif %} {% endif %}
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
+      <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <table>
+          <tr>
+            <td>Имя пользователя</td>
+            <td>{{ form.username }}</td>
+          </tr>
 
-<tr>
-  <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
-</tr>
+          <tr>
+            <td>Пароль</td>
+            <td>{{ form.password }}</td>
+          </tr>
+        </table>
 
-<tr>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
-</tr>
-</table>
+        <input type="submit" value="Войти" class="bt" />
+        <input type="hidden" name="next" value="{{ next }}" />
+      </form>
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
-<p><a href="/auth/register">Not with us?</a></p>
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-
-{% endblock %}
+      <p><a href="/auth/register">Ещё не с нами?</a></p>
+      <p><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
+    </section>
+    <script src="{% static 'modules/anime.js' %}"></script>
+    <script src="{% static 'modules/triggers.js' %}"></script>
+    <script src="{% static 'login/main.js' %}"></script>
+    {% endblock %}
+  </body>
+</html>
