--- a/simple_votings/templates/registration/password_reset_confirm.html
+++ b/simple_votings/templates/registration/password_reset_confirm.html
@@ -1,43 +1,59 @@
-{% extends "../base.html" %}
-{% block content %}
+{% extends "../base.html" %} {% load static %}
+<!--  -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    {% block head %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Восстановить пароль</title>
     {% if validlink %}
-        <p>Пожалуйста введите ваш новый пароль.</p>
-        <form action="" method="post">
-        {% csrf_token %}
-            <table>
-                <tr>
-                    <td>
-                        <label for="id_new_password1">Новый пароль:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>
-                        <label for="id_new_password2">Повторите свой пароль:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                {% if form.new_password1.errors or form.new_password2.errors %}
-                <tr>
-                    <td>Ошибки:</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password1.errors }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}</td>
-                </tr>
-                {% endif %}
-                <tr>
-                    <td><input type="submit" value="Изменить пароль" /></td>
-                </tr>
-            </table>
-        </form>
+    <link rel="stylesheet" href="{% static 'reset/confirm.css' %}" />
     {% else %}
-        <h1>Неправильная ссылка</h1>
-        <hr>
-        <span>
-            Ссылка для сброса пароля инвалид :(, возможна она уже была использована.
-            Пожалуйста, получите новую ссылку для сброса пароля </span>
-        <a href="http://192.168.1.76:8000/auth/password_reset/">тут</a>
-        <span>.</span>
+    <link rel="stylesheet" href="{% static 'msgpage/style.css' %}" />
     {% endif %}
-{% endblock %}
+    <!--  -->
+    {% endblock %}
+  </head>
+  <body>
+    {% block content %}
+    <!--  -->
+    {% if validlink %}
+    <form action="" method="post">
+      <p>Пожалуйста введите ваш новый пароль.</p>
+      {% csrf_token %}
+      <section class="field">
+        <label for="id_new_password1">Новый пароль:</label>
+        {{ form.new_password1 }}
+      </section>
+      <section class="field">
+        <label for="id_new_password2">Повторите свой пароль:</label>
+        {{ form.new_password2 }}
+      </section>
+      <input type="submit" class="bt" value="Изменить пароль" />
+    </form>
+
+    {% if form.new_password1.errors or form.new_password2.errors %}
+    <p class="error">
+      {% for error in form.new_password1.errors %} {{ error }}<br />
+      {% endfor %}
+      <br />
+      {% for error in form.new_password2.errors %} {{ error }}<br />
+      {% endfor %}
+    </p>
+    {% endif %}
+    <!--  -->
+    {% else %}
+    <p class="error">
+      Неправильная ссылка<br />Ссылка для сброса пароля инвалид :(<br />
+      Возможно, она уже была использована. <br />
+      Пожалуйста, получите новую ссылку для сброса пароля
+      <a href="/auth/password_reset/">тут</a>.
+    </p>
+    {% endif %}
+    <!--  -->
+    <script src="{% static 'modules/anime.js' %}"></script>
+    <script src="{% static 'modules/triggers.js' %}"></script>
+    <script src="{% static 'reset/confirm.js' %}"></script>
+    {% endblock %}
+  </body>
+</html>
