Change user profile

--- a/simple_votings/templates/accounts/profile.html
+++ b/simple_votings/templates/accounts/profile.html
@@ -3,4 +3,5 @@
 {% block content %}
 <p>Здесь должен быть макет профиля</p>
 <a href="/auth/logout">Выйти</a>
+<a href="/auth/change">Поменять профиль</a>
 {% endblock %}
