some more links

--- a/simple_votings/templates/whatever/tmp_index.html
+++ b/simple_votings/templates/whatever/tmp_index.html
@@ -17,6 +17,12 @@
       html {
         overflow: hidden;
       }
+      span {
+        pointer-events: none;
+      }
+      a {
+        pointer-events: all;
+      }
     </style>
     <div></div>
     <script>
@@ -71,6 +77,12 @@
         "(╯°□°)╯︵ ┻━┻",
         "AMOGUS",
         '<a href="https://discord.gg/EMudh3uqtb"> https://discord.gg/EMudh3uqtb </>',
+        '<a href="./auth/login/"> ВОЙТИ В АККАУНТ </>',
+        '<a href="./auth/register"> РЕГИСТРАЦИЯ </>',
+        '<a href="./auth/login/"> ВОЙТИ В АККАУНТ </>',
+        '<a href="./auth/register"> РЕГИСТРАЦИЯ </>',
+        '<a href="./auth/login/"> ВОЙТИ В АККАУНТ </>',
+        '<a href="./auth/register"> РЕГИСТРАЦИЯ </>',
         "ИЩИ СЕБЯ",
         "КТО МЯУКАЕТ?",
         "МЯЯЯЯЯУ",
