even more links

--- a/simple_votings/templates/whatever/tmp_index.html
+++ b/simple_votings/templates/whatever/tmp_index.html
@@ -65,6 +65,7 @@
         '<img src="https://cdn.7tv.app/emote/60af9e3b52a13d1adb78e15e/4x">',
         '<img src="https://cdn.7tv.app/emote/61056560b80f269577bcd6fe/4x">',
         '<img src="https://cdn.7tv.app/emote/60da2f42df4f4c65b868c371/4x">',
+        '<img src="https://cdn.7tv.app/emote/6180e0a7e0801fb98788dbc9/4x">',
         "МЕНЯ СЛЫШНО?",
         "ПРОВАЙДЕР М*!@K!",
         "МЕНЯ СЛЫШНО?",
