just another little change

--- a/simple_votings/simple_votings/staticfiles/base/style.scss
+++ b/simple_votings/simple_votings/staticfiles/base/style.scss
@@ -44,6 +44,7 @@ body {
     * {
       margin: 10px 0;
     }
+    min-width: 400px;
     input {
       background: rgba(0, 0, 0, 0.2);
       border: none;
