--- a/simple_votings/templates/add.html
+++ b/simple_votings/templates/add.html
@@ -9,6 +9,7 @@
   <body>
     <form action="/add/" method="POST">
       {% csrf_token %}
+      <h3>Создать новое голосование</h3>
       <table>
         <tr>
           <td>Заголовок голосования</td>
