--- a/simple_votings/simple_votings/staticfiles/base/style.css
+++ b/simple_votings/simple_votings/staticfiles/base/style.css
@@ -61,6 +61,7 @@ body form {
           align-items: center;
   padding: 20px;
   background: rgba(255, 255, 255, 0.05);
+  min-width: 400px;
 }
 
 body form * {
