--- a/simple_votings/templates/all.html
+++ b/simple_votings/templates/all.html
@@ -29,7 +29,7 @@
             <input type="hidden" name="old_theme" value="{{ item.theme }}">
             <input type="submit" value="Изменить">
         </form>
-        <form action="/vote/report" method="get">
+        <form action="/vote/report/create" method="get">
             <input type="hidden" name="vote_theme" value="{{ item.theme }}">
             <input type="submit" value="Пожаловаться">
         </form>
