--- a/simple_votings/templates/accounts/profile.html
+++ b/simple_votings/templates/accounts/profile.html
@@ -4,6 +4,7 @@
     <p>Здесь должен быть макет профиля</p>
     <a href="/auth/logout">Выйти</a>
     <a href="/auth/change">Поменять профиль</a>
+    <a href="/show/">Список голосований</a>
     {% if is_moderator %}
         <a href="/vote/report/table">Репорты голосований</a>
     {% endif %}
