--- a/simple_votings/templates/vote_report/reports_table.html
+++ b/simple_votings/templates/vote_report/reports_table.html
@@ -9,7 +9,12 @@
 {% for report in reports %}
     <br>
     <h1>{{ report.theme }} от {{ report.author.username }}</h1>
-    <h6>{{ report.content }}</h6>
+    <h2>{{ report.content }}</h2>
     <p>Id: {{ report.id }}</p>
+    <form action="/vote/report/delete" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="id" value="{{ report.id }}">
+        <input type="submit" value="Удалить">
+    </form>
 {% endfor %}
 {% endblock %}
