Fixed migration bug. Changed report functionality.

--- a/simple_votings/templates/all.html
+++ b/simple_votings/templates/all.html
@@ -29,11 +29,11 @@
             <input type="hidden" name="old_theme" value="{{ item.theme }}">
             <input type="submit" value="Изменить">
         </form>
-        {% if is_moderator %}
         <form action="/vote/report/create" method="get">
-            <input type="hidden" name="vote_theme" value="{{ item.theme }}">
+            <input type="hidden" name="id" value="{{ item.id }}">
             <input type="submit" value="Пожаловаться">
         </form>
+        {% if is_moderator %}
         <form action="/vote/delete" method="post">
             {% csrf_token %}
             <input type="hidden" name="id" value="{{ item.id }}">
