--- a/simple_votings/templates/accounts/profile.html
+++ b/simple_votings/templates/accounts/profile.html
@@ -4,4 +4,5 @@
 <p>Здесь должен быть макет профиля</p>
 <a href="/auth/logout">Выйти</a>
 <a href="/auth/change">Поменять профиль</a>
+<a href="/accounts/profile/statistic">Статистика</a>
 {% endblock %}
