--- a/simple_votings/templates/accounts/profile_statistic.html
+++ b/simple_votings/templates/accounts/profile_statistic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Статистика</title>
 </head>
 <body>
     <h1>Пользователь:{{ user.username }}</h1>
