I hope I did something

--- a/simple_votings/templates/whatever/tmp_index.html
+++ b/simple_votings/templates/whatever/tmp_index.html
@@ -74,6 +74,7 @@
       }
       a {
         pointer-events: all;
+	color: lightblue;
       }
     </style>
     <div></div>
@@ -139,6 +140,10 @@
         '<a href="./add/"> СОЗДАТЬ ГОЛОСОВАНИЕ </>',
         '<a href="./add/"> СОЗДАТЬ ГОЛОСОВАНИЕ </>',
         '<a href="./add/"> СОЗДАТЬ ГОЛОСОВАНИЕ </>',
+	'<a href="./list/"> СПИСОК ГОЛОСОВАНИЙ </>',
+	'<a href="./list/"> СПИСОК ГОЛОСОВАНИЙ </>',
+	'<a href="./list/"> СПИСОК ГОЛОСОВАНИЙ </>',
+	
         "ИЩИ СЕБЯ",
         "КТО МЯУКАЕТ?",
         "МЯЯЯЯЯУ",
