--- a/simple_votings/templates/registration/password_reset_form.html
+++ b/simple_votings/templates/registration/password_reset_form.html
@@ -1,29 +1,22 @@
-{% extends "../base.html" %} {% load static %}
+{% extends "../base.html" %}
+{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    {% block head %}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Сбросить пароль</title>
-    <link rel="stylesheet" href="{% static 'reset/form.css' %}" />
-    {% endblock %}
-  </head>
-  <body>
-    {% block content %}
-    <form action="" method="post">
-      <p>Восстановление пароля</p>
-      {% csrf_token %}
-      <!--  -->
+{% block head %}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Сбросить пароль</title>
+  <link rel="stylesheet" href="{% static 'reset/form.css' %}" />
+{% endblock %}
 
-      {% if form.email.errors %} {{ form.email.errors }} {% endif%}
+{% block content %}
+  <form action="" method="post">
+    <p>Восстановление пароля</p>
+    {% csrf_token %}
 
-      <!--  -->
-      <section class="field">
-        <label>{{ form.email.label }}</label> {{ form.email }}
-      </section>
-      <input type="submit" class="bt" value="Сбросить!" />
-    </form>
-    {% endblock %}
-  </body>
-</html>
+    {% if form.email.errors %} {{ form.email.errors }} {% endif %}
+
+    <section class="field">
+      <label>{{ form.email.label }}</label> {{ form.email }}
+    </section>
+    <input type="submit" class="bt" value="Сбросить!" />
+  </form>
+{% endblock %}
