--- a/simple_votings/templates/accounts/profile_statistic.html
+++ b/simple_votings/templates/accounts/profile_statistic.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "base.html" %}
+{% load static %}
+
+{% block head %}
     <title>Статистика</title>
-</head>
-<body>
+{% endblock %}
+{% block content %}
     <h1>Пользователь:{{ user.username }}</h1>
     <h1>Дата регистрации:{{ date_reg }}</h1>
     <h1>Текущая сессия на сайте:{{ time_online_hour }}</h1>
@@ -22,5 +22,4 @@
                 {% endif %}
             {% endfor %}
     {% endfor %}
-</body>
-</html>
+{% endblock %}
