--- a/simple_votings/templates/registration/password_reset_email.html
+++ b/simple_votings/templates/registration/password_reset_email.html
@@ -1,4 +1,4 @@
-Кто то попросил сбросить пароль для почты {{ email }}. Для сброса пароля
-смотрите ссылку ниже: {{ protocol }}://{{ domain }}{% url
-'password_reset_confirm' uidb64=uid token=token %} Если вы не запрашивали сброса
-пароля, проигнорируйте это письмо.
+Кто то попросил сбросить пароль для почты {{ email }}.
+Для сброса пароля смотрите ссылку ниже:
+{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+Если вы не запрашивали сброса пароля, проигнорируйте это письмо.
