--- a/simple_votings/templates/registration/register.html
+++ b/simple_votings/templates/registration/register.html
@@ -1,46 +1,40 @@
-{% extends "../base.html" %} {% load static %}
+{% extends "../base.html" %}
+{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    {% block head %}
-    <link rel="stylesheet" href="{% static 'register/style.css' %}" />
-    <title>Регистрация</title>
-    {% endblock %}
-  </head>
-  <body>
-    {% block content %}
-    <section class="regCont">
-      <h1>Регистрация</h1>
 
-      <form method="post" action="/auth/register">
-        {% csrf_token %}
-        <table>
-          <tr>
-            <td>Имя пользователя</td>
-            <td>{{ form.username }}</td>
-          </tr>
+{% block head %}
+  <link rel="stylesheet" href="{% static 'register/style.css' %}" />
+  <title>Регистрация</title>
+{% endblock %}
+{% block content %}
+<section class="regCont">
+  <h1>Регистрация</h1>
 
-          <tr>
-            <td>Пароль</td>
-            <td>{{ form.password }}</td>
-          </tr>
+  <form method="post" action="{% url 'register_user' %}">
+    {% csrf_token %}
+    <table>
+      <tr>
+        <td>Имя пользователя</td>
+        <td>{{ form.username }}</td>
+      </tr>
 
-          <tr>
-            <td>Email</td>
-            <td>{{ form.email }}</td>
-          </tr>
-        </table>
+      <tr>
+        <td>Пароль</td>
+        <td>{{ form.password }}</td>
+      </tr>
 
-        <input type="submit" value="Register" class="bt" />
-      </form>
+      <tr>
+        <td>Email</td>
+        <td>{{ form.email }}</td>
+      </tr>
+    </table>
 
-      {# Assumes you setup the password_reset view in your URLconf #}
-      <p><a href="/auth/login">Уже есть аккаунт?</a></p>
-    </section>
-    <script src="{% static 'modules/anime.js' %}"></script>
-    <script src="{% static 'modules/triggers.js' %}"></script>
-    <script src="{% static 'register/main.js' %}"></script>
-    {% endblock %}
-  </body>
-</html>
+    <input type="submit" value="Register" class="bt" />
+  </form>
+
+  <p><a href="{% url 'login' %}">Уже есть аккаунт?</a></p>
+</section>
+<script src="{% static 'modules/anime.js' %}"></script>
+<script src="{% static 'modules/triggers.js' %}"></script>
+<script src="{% static 'register/main.js' %}"></script>
+{% endblock %}
