--- a/simple_votings/templates/vote_report/reports_table.html
+++ b/simple_votings/templates/vote_report/reports_table.html
@@ -13,7 +13,7 @@
 
     <p>ID голосования: {{ report.vote.id }}</p>
     <p>Тема голосования: {{ report.vote.theme }}</p>
-    <form action="/vote/report/delete" method="post">
+    <form action="{% url 'delete_report' %}" method="post">
         {% csrf_token %}
         <input type="hidden" name="id" value="{{ report.id }}">
         <input type="submit" value="Удалить">
