--- a/simple_votings/templates/vote_result.html
+++ b/simple_votings/templates/vote_result.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "base.html" %}
+{% load static %}
+
+{% block head %}
     <title>Результаты</title>
-</head>
-<body>
+{% endblock %}
+{% block content %}
     <h1>Тема голосования:{{ vote.theme }}</h1>
     <hr>
     <h3>Описание:{{ vote.description }}</h3>
@@ -17,5 +17,4 @@
     {% endfor %}
     <hr>
     <hr>
-</body>
-</html>
+{% endblock %}
