--- a/simple_votings/templates/votes/all.html
+++ b/simple_votings/templates/votes/all.html
@@ -7,7 +7,7 @@
 <body>
     <hr>
     <hr>
-    {% for vote in data %}
+    {% for vote in votes %}
         <h1>Тема голосования:{{ vote.theme }}</h1>
         <hr>
         <h3>Описание:{{ vote.description }}</h3>
