--- a/simple_votings/templates/votes/description_vote.html
+++ b/simple_votings/templates/votes/description_vote.html
@@ -5,11 +5,11 @@
     <title>description_vote</title>
 {% endblock %}
 {% block content %}
-    {% for item in data %}
-    {% if item.id == id %}
-    <h1>Тема голосования: {{ item.theme }}</h1>
+    {% for user_vote in user_votes %}   <!-- TODO: performance issue.  -->
+    {% if user_vote.id == id %}
+    <h1>Тема голосования: {{ user_vote.theme }}</h1>
     <hr>
-    <h3>Описание: {{ item.description }}</h3>
+    <h3>Описание: {{ user_vote.description }}</h3>
     <hr>
     <form action="{% url 'description' %}" method="POST">
         {% csrf_token %}
