--- a/simple_votings/templates/registration/change_user.html
+++ b/simple_votings/templates/registration/change_user.html
@@ -1,4 +1,4 @@
-{% extends "../base.html" %} {% load static %}
+{% extends "../../base.html" %} {% load static %}
 
 {% block head %}
 <title>Изменить пользователя</title>
@@ -6,16 +6,14 @@
 
 {% block content %}
 {% if form.errors %}
-
-<p class="error">
-Ошибки:
-</p>
-{% for error in form.errors %}
-<p class="error">
-{{ error }}
-</p>
-{% endfor %}
-
+    <p class="error">
+    Ошибки:
+    </p>
+    {% for error in form.errors %}
+    <p class="error">
+    {{ error }}
+    </p>
+    {% endfor %}
 {% endif %}
 
 <form method="post" action="#">
