--- a/simple_votings/templates/votes/result.html
+++ b/simple_votings/templates/votes/result.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "base.html" %}
+{% load static %}
+
+{% block head %}
     <title>Результаты</title>
-</head>
-<body>
+{% endblock %}
+{% block content %}
     <h1>Тема голосования:{{ vote.theme }}</h1>
     <hr>
     <h3>Описание:{{ vote.description }}</h3>
     <hr>
     {% csrf_token %}
     <h5>Результаты</h5>
-    {% for i, k in ans.items %}
+    {% for i, k in answers.items %}
         {{ i }} - {{ k }}%
         <br>
     {% endfor %}
     <hr>
     <hr>
-</body>
-</html>
+{% endblock %}
