--- a/simple_votings/simple_votings/staticfiles/polllist/style.css
+++ b/simple_votings/simple_votings/staticfiles/polllist/style.css
@@ -244,7 +244,7 @@ body section .loading {
           transform: rotateX(180deg) translateY(-10px);
 }
 
-.plate .exp {
+.plate .exp, .plate .bt, .plate .bt form {
   height: 20px;
   width: 20px;
   font-size: 20px;
@@ -261,6 +261,18 @@ body section .loading {
           transform-origin: center;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
+  min-width: unset;
+}
+
+.plate .bt * {
+  padding: 0;
+  margin: 0;
+}
+
+.plate .bt input {
+  font-size: 16px;
+  height: 20px;
+  width: 20px;
 }
 
 .plate p {
@@ -289,5 +301,9 @@ body section .loading {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.plate .column a {
+  text-decoration: none;
 }
 /*# sourceMappingURL=style.css.map */
