--- a/simple_votings/simple_votings/staticfiles/polllist/style.scss
+++ b/simple_votings/simple_votings/staticfiles/polllist/style.scss
@@ -159,7 +159,7 @@ body {
       transform: rotateX(180deg) translateY(-10px);
     }
   }
-  .exp {
+  .exp, .bt, .bt form{
     height: 20px;
     width: 20px;
     font-size: 20px;
@@ -169,6 +169,18 @@ body {
     transition: 0.3s;
     transform-origin: center;
     transform-style: preserve-3d;
+    min-width: unset;
+  }
+  .bt{
+    *{
+      padding: 0;
+      margin: 0;
+    }
+    input{
+      font-size: 16px;
+      height: 20px;
+      width: 20px;
+    }
   }
   p {
     background: transparent;
@@ -189,5 +201,8 @@ body {
   .column {
     display: flex;
     flex-direction: column;
+    a{
+      text-decoration: none;
+    }
   }
 }
