--- a/simple_votings/templates/accounts/profile_statistic.html
+++ b/simple_votings/templates/accounts/profile_statistic.html
@@ -10,17 +10,10 @@
     <h1>Текущая сессия на сайте:{{ time_online_hour }}</h1>
     <hr>
     <h2>Количество пройденных голосований: {{ count_of_votes }}</h2>
-    {% for item in data %}
-        <h1>Тема голосования:{{ item.vote.theme }}</h1>
-        <h5>Ваши ответы</h5>
-            {% for i in item.results %}
-                {% if i == ';' %}
-                <br>
-                <br>
-                {% else %}
-                {{ i }}
-                {% endif %}
-            {% endfor %}
+    {% for i, k in ans_word.items %}
+        <h1>Тема голосования:{{ i.theme }}</h1>
+        <h5>Ваш ответ</h5>
+        {{ k }}
     {% endfor %}
 </body>
 </html>
